# stopwatch

./: .gitignore  CMakeLists.txt  README.md
cmake/: FindPAPI.cmake  StopwatchConfig.cmake  StopwatchConfig.cmake.in
cmake/modules/: FindPAPI.cmake
examples/: CMakeLists.txt  matmul.c  matmul_dist.c  matmul_loop.c
examples/examples_c/: CMakeLists.txt  matmul.c  matmul_loop.c
examples/examples_fortran/: CMakeLists.txt  heat_transfer.F90
include/stopwatch/: fstopwatch.F03  stopwatch.h
scripts/: rename_measurements.py  requirements.txt  roofline_plotter.py
src/: CMakeLists.txt  call_tree.c  call_tree.h  matmul_dist.c  papi_matmul.c  stopwatch.c  str_table.c  str_table.h
test/: CMakeLists.txt  assertion_util.h  call_tree_tests.c  mat_mul.h  math_fun_test_util.h  math_fun_util.h  print_table_tests.c  stopwatch_initializing_tests.c  stopwatch_measurement_tests.c  stopwatch_tests.c
